<resources>
    <string name="app_name">Ferapid</string>
    <string name="app_cajole">Generate/Use an existing code to receive. Scan a code to send. Easy-Peasy.</string>

    <string name="send">Send</string>
    <string name="receive">Receive</string>

    <!-- generate code dialog -->
    <string name="new_code">New Code</string>
    <string name="account_number">Account Number</string>
    <string name="bank_code">Bank Code</string>
    <string name="amount">Amount</string>
    <string name="generate">Generate</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="transaction_status">Transaction Status</string>

    <!--processor activity and children dialogs -->
    <string name="wallet_lock">Wallet Lock</string>
    <string name="confirm_payment">Confirm</string>

    <!--uri stuff-->
    <string name="ferapid_uri_scheme">ferapid</string>
    <string name="ferapid_uri_host">transfer</string>
    <string name="ferapid_uri_param_account_number">account</string>
    <string name="ferapid_uri_param_bank_code">bank_code</string>
    <string name="ferapid_uri_param_amount">amount</string>
    
    <!-- banks and bank codes-->
    <string-array name="banks_array">

    </string-array>
</resources>
